// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaceScreen render correctly with Main 1`] = `
<div
  className="page
      page--gray
      page--main
    "
>
  <header
    className="header"
  >
    <div
      className="container"
    >
      <div
        className="header__wrapper"
      >
        <div
          className="header__left"
        >
          <a
            className="header__logo-link"
            href="#"
          >
            <img
              alt="6 cities logo"
              className="header__logo"
              height="41"
              onClick={[Function]}
              src="img/logo.svg"
              width="81"
            />
          </a>
        </div>
        <nav
          className="header__nav"
        >
          <ul
            className="header__nav-list"
          >
            <li
              className="header__nav-item user"
            >
              <a
                className="header__nav-link header__nav-link--profile"
                href="#"
              >
                <div
                  className="header__avatar-wrapper user__avatar-wrapper"
                />
                <span
                  className="header__login"
                  onClick={[Function]}
                >
                  Sign in
                </span>
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </header>
  <div
    className="children-component"
  />
</div>
`;

exports[`PlaceScreen render correctly with Place Property 1`] = `
<div
  className="page
      undefined
      page--details
    "
>
  <header
    className="header"
  >
    <div
      className="container"
    >
      <div
        className="header__wrapper"
      >
        <div
          className="header__left"
        >
          <a
            className="header__logo-link"
            href="#"
          >
            <img
              alt="6 cities logo"
              className="header__logo"
              height="41"
              onClick={[Function]}
              src="img/logo.svg"
              width="81"
            />
          </a>
        </div>
        <nav
          className="header__nav"
        >
          <ul
            className="header__nav-list"
          >
            <li
              className="header__nav-item user"
            >
              <a
                className="header__nav-link header__nav-link--profile"
                href="#"
              >
                <div
                  className="header__avatar-wrapper user__avatar-wrapper"
                />
                <span
                  className="header__login"
                  onClick={[Function]}
                >
                  Sign in
                </span>
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </header>
  <div
    className="children-component"
  />
</div>
`;
